# steer-guard

./: .gitignore  README.md  evaluation.ipynb  pyproject.toml  sandbagging_detection.ipynb
src/: utils.py
src/classifiers/: __init__.py  base.py  dot_product.py  logit_shift.py
src/evals/: __init__.py  base.py
src/evals/gpqa/: __init__.py  dataset.py  evaluation.py
src/evals/misalignment/: __init__.py  dataset.py  evaluation.py
src/evals/sycophancy/: __init__.py  dataset.py  evaluation.py
src/experiments/: __init__.py  config.py  metrics.py  runner.py
src/sandbagging/: __init__.py  analysis.py  dataset.py  evaluation.py
